Entrega 1/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID SEMICOLON cicloVars cicloFuncion MAIN bloque
Rule 2     cicloVars -> vars cicloVars
Rule 3     cicloVars -> <empty>
Rule 4     vars -> VAR auxVar1
Rule 5     auxVar1 -> idVars COLON tipo SEMICOLON auxVar1
Rule 6     auxVar1 -> <empty>
Rule 7     idVars -> ID ambIdVars
Rule 8     ambIdVars -> COMMA idVars
Rule 9     ambIdVars -> <empty>
Rule 10    tipo -> auxTipo1
Rule 11    tipo -> CHAR
Rule 12    auxTipo1 -> auxTipo2 LBRACKET CTEINT RBRACKET
Rule 13    auxTipo1 -> auxTipo2
Rule 14    auxTipo2 -> INT
Rule 15    auxTipo2 -> BOOL
Rule 16    auxTipo2 -> STRING
Rule 17    auxTipo2 -> FLOAT
Rule 18    bloque -> LBRACE cicloBloque RBRACE
Rule 19    cicloBloque -> estatuto cicloBloque
Rule 20    cicloBloque -> <empty>
Rule 21    estatuto -> asignacion
Rule 22    estatuto -> condicion
Rule 23    estatuto -> escritura
Rule 24    estatuto -> lectura
Rule 25    estatuto -> llamada
Rule 26    estatuto -> ciclo
Rule 27    asignacion -> ID auxAsignacion1 EQUALA exp SEMICOLON
Rule 28    auxAsignacion1 -> LBRACKET exp RBRACKET
Rule 29    auxAsignacion1 -> <empty>
Rule 30    escritura -> PRINT LPAREN auxEscritura1 RPAREN SEMICOLON
Rule 31    auxEscritura1 -> auxEscritura2 ambAuxEscritura1
Rule 32    ambAuxEscritura1 -> COMMA auxEscritura1
Rule 33    ambAuxEscritura1 -> <empty>
Rule 34    auxEscritura2 -> exp
Rule 35    auxEscritura2 -> CTESTRING
Rule 36    expresion -> exp auxExpresion exp
Rule 37    expresion -> <empty>
Rule 38    auxExpresion -> GTHAN
Rule 39    auxExpresion -> LTHAN
Rule 40    auxExpresion -> NOTEQUAL
Rule 41    auxExpresion -> GETHAN
Rule 42    auxExpresion -> LETHAN
Rule 43    auxExpresion -> EQUAL
Rule 44    condicion -> IF LPAREN expresion RPAREN bloque auxCondicion
Rule 45    auxCondicion -> ELSE bloque
Rule 46    auxCondicion -> <empty>
Rule 47    exp -> cicloExp
Rule 48    cicloExp -> termino ambExp
Rule 49    ambExp -> auxExp cicloExp
Rule 50    ambExp -> <empty>
Rule 51    auxExp -> PLUS
Rule 52    auxExp -> MINUS
Rule 53    termino -> cicloTermino
Rule 54    cicloTermino -> factor ambCicloTermino
Rule 55    ambCicloTermino -> auxTermino cicloTermino
Rule 56    ambCicloTermino -> <empty>
Rule 57    auxTermino -> MULTI
Rule 58    auxTermino -> DIVIDE
Rule 59    factor -> LPAREN exp RPAREN
Rule 60    factor -> auxFactor varcte
Rule 61    auxFactor -> auxExp
Rule 62    auxFactor -> <empty>
Rule 63    varcte -> ID auxVarcte
Rule 64    varcte -> CTEINT
Rule 65    varcte -> CTEFLOAT
Rule 66    varcte -> CTECHAR
Rule 67    varcte -> CTEBOOL
Rule 68    varcte -> CTESTRING
Rule 69    auxVarcte -> LPAREN exp RPAREN
Rule 70    auxVarcte -> LBRACKET exp LBRACKET
Rule 71    auxVarcte -> <empty>
Rule 72    cicloFuncion -> funcion cicloFuncion
Rule 73    cicloFuncion -> <empty>
Rule 74    funcion -> FUNCTION ID LPAREN auxFunction RPAREN bloque
Rule 75    auxFunction -> parametros
Rule 76    auxFunction -> <empty>
Rule 77    parametros -> auxParametros
Rule 78    auxParametros -> tipo ID ambAuxParametros
Rule 79    ambAuxParametros -> COMMA auxParametros
Rule 80    ambAuxParametros -> <empty>
Rule 81    ciclo -> WHILE LPAREN expresion RPAREN bloque
Rule 82    llamada -> ID LPAREN auxLlamada RPAREN SEMICOLON
Rule 83    auxLlamada -> argumentos
Rule 84    auxLlamada -> <empty>
Rule 85    argumentos -> auxArgumentos1
Rule 86    argumentos -> <empty>
Rule 87    auxArgumentos1 -> exp ambAuxArgumentos1
Rule 88    ambAuxArgumentos1 -> COMMA auxArgumentos1
Rule 89    ambAuxArgumentos1 -> <empty>
Rule 90    lectura -> READ LPAREN ID RPAREN SEMICOLON

Terminals, with rules where they appear

BOOL                 : 15
CHAR                 : 11
COLON                : 5
COMMA                : 8 32 79 88
CTEBOOL              : 67
CTECHAR              : 66
CTEFLOAT             : 65
CTEINT               : 12 64
CTESTRING            : 35 68
DIVIDE               : 58
ELSE                 : 45
EQUAL                : 43
EQUALA               : 27
FLOAT                : 17
FUNCTION             : 74
GETHAN               : 41
GTHAN                : 38
ID                   : 1 7 27 63 74 78 82 90
IF                   : 44
INT                  : 14
LBRACE               : 18
LBRACKET             : 12 28 70 70
LETHAN               : 42
LPAREN               : 30 44 59 69 74 81 82 90
LTHAN                : 39
MAIN                 : 1
MINUS                : 52
MULTI                : 57
NOTEQUAL             : 40
PLUS                 : 51
PRINT                : 30
PROGRAM              : 1
RBRACE               : 18
RBRACKET             : 12 28
READ                 : 90
RPAREN               : 30 44 59 69 74 81 82 90
SEMICOLON            : 1 5 27 30 82 90
STRING               : 16
VAR                  : 4
WHILE                : 81
error                : 

Nonterminals, with rules where they appear

ambAuxArgumentos1    : 87
ambAuxEscritura1     : 31
ambAuxParametros     : 78
ambCicloTermino      : 54
ambExp               : 48
ambIdVars            : 7
argumentos           : 83
asignacion           : 21
auxArgumentos1       : 85 88
auxAsignacion1       : 27
auxCondicion         : 44
auxEscritura1        : 30 32
auxEscritura2        : 31
auxExp               : 49 61
auxExpresion         : 36
auxFactor            : 60
auxFunction          : 74
auxLlamada           : 82
auxParametros        : 77 79
auxTermino           : 55
auxTipo1             : 10
auxTipo2             : 12 13
auxVar1              : 4 5
auxVarcte            : 63
bloque               : 1 44 45 74 81
ciclo                : 26
cicloBloque          : 18 19
cicloExp             : 47 49
cicloFuncion         : 1 72
cicloTermino         : 53 55
cicloVars            : 1 2
condicion            : 22
escritura            : 23
estatuto             : 19
exp                  : 27 28 34 36 36 59 69 70 87
expresion            : 44 81
factor               : 54
funcion              : 72
idVars               : 5 8
lectura              : 24
llamada              : 25
parametros           : 75
programa             : 0
termino              : 48
tipo                 : 5 78
varcte               : 60
vars                 : 2

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID SEMICOLON cicloVars cicloFuncion MAIN bloque

    PROGRAM         shift and go to state 1

    programa                       shift and go to state 2

state 1

    (1) programa -> PROGRAM . ID SEMICOLON cicloVars cicloFuncion MAIN bloque

    ID              shift and go to state 3


state 2

    (0) S' -> programa .



state 3

    (1) programa -> PROGRAM ID . SEMICOLON cicloVars cicloFuncion MAIN bloque

    SEMICOLON       shift and go to state 4


state 4

    (1) programa -> PROGRAM ID SEMICOLON . cicloVars cicloFuncion MAIN bloque
    (2) cicloVars -> . vars cicloVars
    (3) cicloVars -> .
    (4) vars -> . VAR auxVar1

    FUNCTION        reduce using rule 3 (cicloVars -> .)
    MAIN            reduce using rule 3 (cicloVars -> .)
    VAR             shift and go to state 7

    cicloVars                      shift and go to state 6
    vars                           shift and go to state 5

state 5

    (2) cicloVars -> vars . cicloVars
    (2) cicloVars -> . vars cicloVars
    (3) cicloVars -> .
    (4) vars -> . VAR auxVar1

    FUNCTION        reduce using rule 3 (cicloVars -> .)
    MAIN            reduce using rule 3 (cicloVars -> .)
    VAR             shift and go to state 7

    cicloVars                      shift and go to state 8
    vars                           shift and go to state 5

state 6

    (1) programa -> PROGRAM ID SEMICOLON cicloVars . cicloFuncion MAIN bloque
    (72) cicloFuncion -> . funcion cicloFuncion
    (73) cicloFuncion -> .
    (74) funcion -> . FUNCTION ID LPAREN auxFunction RPAREN bloque

    MAIN            reduce using rule 73 (cicloFuncion -> .)
    FUNCTION        shift and go to state 9

    cicloFuncion                   shift and go to state 10
    funcion                        shift and go to state 11

state 7

    (4) vars -> VAR . auxVar1
    (5) auxVar1 -> . idVars COLON tipo SEMICOLON auxVar1
    (6) auxVar1 -> .
    (7) idVars -> . ID ambIdVars

    VAR             reduce using rule 6 (auxVar1 -> .)
    FUNCTION        reduce using rule 6 (auxVar1 -> .)
    MAIN            reduce using rule 6 (auxVar1 -> .)
    ID              shift and go to state 14

    idVars                         shift and go to state 12
    auxVar1                        shift and go to state 13

state 8

    (2) cicloVars -> vars cicloVars .

    FUNCTION        reduce using rule 2 (cicloVars -> vars cicloVars .)
    MAIN            reduce using rule 2 (cicloVars -> vars cicloVars .)


state 9

    (74) funcion -> FUNCTION . ID LPAREN auxFunction RPAREN bloque

    ID              shift and go to state 15


state 10

    (1) programa -> PROGRAM ID SEMICOLON cicloVars cicloFuncion . MAIN bloque

    MAIN            shift and go to state 16


state 11

    (72) cicloFuncion -> funcion . cicloFuncion
    (72) cicloFuncion -> . funcion cicloFuncion
    (73) cicloFuncion -> .
    (74) funcion -> . FUNCTION ID LPAREN auxFunction RPAREN bloque

    MAIN            reduce using rule 73 (cicloFuncion -> .)
    FUNCTION        shift and go to state 9

    cicloFuncion                   shift and go to state 17
    funcion                        shift and go to state 11

state 12

    (5) auxVar1 -> idVars . COLON tipo SEMICOLON auxVar1

    COLON           shift and go to state 18


state 13

    (4) vars -> VAR auxVar1 .

    VAR             reduce using rule 4 (vars -> VAR auxVar1 .)
    FUNCTION        reduce using rule 4 (vars -> VAR auxVar1 .)
    MAIN            reduce using rule 4 (vars -> VAR auxVar1 .)


state 14

    (7) idVars -> ID . ambIdVars
    (8) ambIdVars -> . COMMA idVars
    (9) ambIdVars -> .

    COMMA           shift and go to state 19
    COLON           reduce using rule 9 (ambIdVars -> .)

    ambIdVars                      shift and go to state 20

state 15

    (74) funcion -> FUNCTION ID . LPAREN auxFunction RPAREN bloque

    LPAREN          shift and go to state 21


state 16

    (1) programa -> PROGRAM ID SEMICOLON cicloVars cicloFuncion MAIN . bloque
    (18) bloque -> . LBRACE cicloBloque RBRACE

    LBRACE          shift and go to state 22

    bloque                         shift and go to state 23

state 17

    (72) cicloFuncion -> funcion cicloFuncion .

    MAIN            reduce using rule 72 (cicloFuncion -> funcion cicloFuncion .)


state 18

    (5) auxVar1 -> idVars COLON . tipo SEMICOLON auxVar1
    (10) tipo -> . auxTipo1
    (11) tipo -> . CHAR
    (12) auxTipo1 -> . auxTipo2 LBRACKET CTEINT RBRACKET
    (13) auxTipo1 -> . auxTipo2
    (14) auxTipo2 -> . INT
    (15) auxTipo2 -> . BOOL
    (16) auxTipo2 -> . STRING
    (17) auxTipo2 -> . FLOAT

    CHAR            shift and go to state 27
    INT             shift and go to state 25
    BOOL            shift and go to state 28
    STRING          shift and go to state 31
    FLOAT           shift and go to state 26

    auxTipo1                       shift and go to state 29
    auxTipo2                       shift and go to state 30
    tipo                           shift and go to state 24

state 19

    (8) ambIdVars -> COMMA . idVars
    (7) idVars -> . ID ambIdVars

    ID              shift and go to state 14

    idVars                         shift and go to state 32

state 20

    (7) idVars -> ID ambIdVars .

    COLON           reduce using rule 7 (idVars -> ID ambIdVars .)


state 21

    (74) funcion -> FUNCTION ID LPAREN . auxFunction RPAREN bloque
    (75) auxFunction -> . parametros
    (76) auxFunction -> .
    (77) parametros -> . auxParametros
    (78) auxParametros -> . tipo ID ambAuxParametros
    (10) tipo -> . auxTipo1
    (11) tipo -> . CHAR
    (12) auxTipo1 -> . auxTipo2 LBRACKET CTEINT RBRACKET
    (13) auxTipo1 -> . auxTipo2
    (14) auxTipo2 -> . INT
    (15) auxTipo2 -> . BOOL
    (16) auxTipo2 -> . STRING
    (17) auxTipo2 -> . FLOAT

    RPAREN          reduce using rule 76 (auxFunction -> .)
    CHAR            shift and go to state 27
    INT             shift and go to state 25
    BOOL            shift and go to state 28
    STRING          shift and go to state 31
    FLOAT           shift and go to state 26

    tipo                           shift and go to state 33
    auxFunction                    shift and go to state 34
    auxParametros                  shift and go to state 35
    auxTipo2                       shift and go to state 30
    parametros                     shift and go to state 36
    auxTipo1                       shift and go to state 29

state 22

    (18) bloque -> LBRACE . cicloBloque RBRACE
    (19) cicloBloque -> . estatuto cicloBloque
    (20) cicloBloque -> .
    (21) estatuto -> . asignacion
    (22) estatuto -> . condicion
    (23) estatuto -> . escritura
    (24) estatuto -> . lectura
    (25) estatuto -> . llamada
    (26) estatuto -> . ciclo
    (27) asignacion -> . ID auxAsignacion1 EQUALA exp SEMICOLON
    (44) condicion -> . IF LPAREN expresion RPAREN bloque auxCondicion
    (30) escritura -> . PRINT LPAREN auxEscritura1 RPAREN SEMICOLON
    (90) lectura -> . READ LPAREN ID RPAREN SEMICOLON
    (82) llamada -> . ID LPAREN auxLlamada RPAREN SEMICOLON
    (81) ciclo -> . WHILE LPAREN expresion RPAREN bloque

    RBRACE          reduce using rule 20 (cicloBloque -> .)
    ID              shift and go to state 47
    IF              shift and go to state 44
    PRINT           shift and go to state 39
    READ            shift and go to state 37
    WHILE           shift and go to state 38

    ciclo                          shift and go to state 40
    asignacion                     shift and go to state 48
    estatuto                       shift and go to state 41
    llamada                        shift and go to state 42
    condicion                      shift and go to state 43
    cicloBloque                    shift and go to state 46
    lectura                        shift and go to state 45
    escritura                      shift and go to state 49

state 23

    (1) programa -> PROGRAM ID SEMICOLON cicloVars cicloFuncion MAIN bloque .

    $end            reduce using rule 1 (programa -> PROGRAM ID SEMICOLON cicloVars cicloFuncion MAIN bloque .)


state 24

    (5) auxVar1 -> idVars COLON tipo . SEMICOLON auxVar1

    SEMICOLON       shift and go to state 50


state 25

    (14) auxTipo2 -> INT .

    LBRACKET        reduce using rule 14 (auxTipo2 -> INT .)
    ID              reduce using rule 14 (auxTipo2 -> INT .)
    SEMICOLON       reduce using rule 14 (auxTipo2 -> INT .)


state 26

    (17) auxTipo2 -> FLOAT .

    LBRACKET        reduce using rule 17 (auxTipo2 -> FLOAT .)
    ID              reduce using rule 17 (auxTipo2 -> FLOAT .)
    SEMICOLON       reduce using rule 17 (auxTipo2 -> FLOAT .)


state 27

    (11) tipo -> CHAR .

    ID              reduce using rule 11 (tipo -> CHAR .)
    SEMICOLON       reduce using rule 11 (tipo -> CHAR .)


state 28

    (15) auxTipo2 -> BOOL .

    LBRACKET        reduce using rule 15 (auxTipo2 -> BOOL .)
    ID              reduce using rule 15 (auxTipo2 -> BOOL .)
    SEMICOLON       reduce using rule 15 (auxTipo2 -> BOOL .)


state 29

    (10) tipo -> auxTipo1 .

    ID              reduce using rule 10 (tipo -> auxTipo1 .)
    SEMICOLON       reduce using rule 10 (tipo -> auxTipo1 .)


state 30

    (12) auxTipo1 -> auxTipo2 . LBRACKET CTEINT RBRACKET
    (13) auxTipo1 -> auxTipo2 .

    LBRACKET        shift and go to state 51
    SEMICOLON       reduce using rule 13 (auxTipo1 -> auxTipo2 .)
    ID              reduce using rule 13 (auxTipo1 -> auxTipo2 .)


state 31

    (16) auxTipo2 -> STRING .

    LBRACKET        reduce using rule 16 (auxTipo2 -> STRING .)
    ID              reduce using rule 16 (auxTipo2 -> STRING .)
    SEMICOLON       reduce using rule 16 (auxTipo2 -> STRING .)


state 32

    (8) ambIdVars -> COMMA idVars .

    COLON           reduce using rule 8 (ambIdVars -> COMMA idVars .)


state 33

    (78) auxParametros -> tipo . ID ambAuxParametros

    ID              shift and go to state 52


state 34

    (74) funcion -> FUNCTION ID LPAREN auxFunction . RPAREN bloque

    RPAREN          shift and go to state 53


state 35

    (77) parametros -> auxParametros .

    RPAREN          reduce using rule 77 (parametros -> auxParametros .)


state 36

    (75) auxFunction -> parametros .

    RPAREN          reduce using rule 75 (auxFunction -> parametros .)


state 37

    (90) lectura -> READ . LPAREN ID RPAREN SEMICOLON

    LPAREN          shift and go to state 54


state 38

    (81) ciclo -> WHILE . LPAREN expresion RPAREN bloque

    LPAREN          shift and go to state 55


state 39

    (30) escritura -> PRINT . LPAREN auxEscritura1 RPAREN SEMICOLON

    LPAREN          shift and go to state 56


state 40

    (26) estatuto -> ciclo .

    ID              reduce using rule 26 (estatuto -> ciclo .)
    IF              reduce using rule 26 (estatuto -> ciclo .)
    PRINT           reduce using rule 26 (estatuto -> ciclo .)
    READ            reduce using rule 26 (estatuto -> ciclo .)
    WHILE           reduce using rule 26 (estatuto -> ciclo .)
    RBRACE          reduce using rule 26 (estatuto -> ciclo .)


state 41

    (19) cicloBloque -> estatuto . cicloBloque
    (19) cicloBloque -> . estatuto cicloBloque
    (20) cicloBloque -> .
    (21) estatuto -> . asignacion
    (22) estatuto -> . condicion
    (23) estatuto -> . escritura
    (24) estatuto -> . lectura
    (25) estatuto -> . llamada
    (26) estatuto -> . ciclo
    (27) asignacion -> . ID auxAsignacion1 EQUALA exp SEMICOLON
    (44) condicion -> . IF LPAREN expresion RPAREN bloque auxCondicion
    (30) escritura -> . PRINT LPAREN auxEscritura1 RPAREN SEMICOLON
    (90) lectura -> . READ LPAREN ID RPAREN SEMICOLON
    (82) llamada -> . ID LPAREN auxLlamada RPAREN SEMICOLON
    (81) ciclo -> . WHILE LPAREN expresion RPAREN bloque

    RBRACE          reduce using rule 20 (cicloBloque -> .)
    ID              shift and go to state 47
    IF              shift and go to state 44
    PRINT           shift and go to state 39
    READ            shift and go to state 37
    WHILE           shift and go to state 38

    ciclo                          shift and go to state 40
    asignacion                     shift and go to state 48
    estatuto                       shift and go to state 41
    llamada                        shift and go to state 42
    condicion                      shift and go to state 43
    cicloBloque                    shift and go to state 57
    lectura                        shift and go to state 45
    escritura                      shift and go to state 49

state 42

    (25) estatuto -> llamada .

    ID              reduce using rule 25 (estatuto -> llamada .)
    IF              reduce using rule 25 (estatuto -> llamada .)
    PRINT           reduce using rule 25 (estatuto -> llamada .)
    READ            reduce using rule 25 (estatuto -> llamada .)
    WHILE           reduce using rule 25 (estatuto -> llamada .)
    RBRACE          reduce using rule 25 (estatuto -> llamada .)


state 43

    (22) estatuto -> condicion .

    ID              reduce using rule 22 (estatuto -> condicion .)
    IF              reduce using rule 22 (estatuto -> condicion .)
    PRINT           reduce using rule 22 (estatuto -> condicion .)
    READ            reduce using rule 22 (estatuto -> condicion .)
    WHILE           reduce using rule 22 (estatuto -> condicion .)
    RBRACE          reduce using rule 22 (estatuto -> condicion .)


state 44

    (44) condicion -> IF . LPAREN expresion RPAREN bloque auxCondicion

    LPAREN          shift and go to state 58


state 45

    (24) estatuto -> lectura .

    ID              reduce using rule 24 (estatuto -> lectura .)
    IF              reduce using rule 24 (estatuto -> lectura .)
    PRINT           reduce using rule 24 (estatuto -> lectura .)
    READ            reduce using rule 24 (estatuto -> lectura .)
    WHILE           reduce using rule 24 (estatuto -> lectura .)
    RBRACE          reduce using rule 24 (estatuto -> lectura .)


state 46

    (18) bloque -> LBRACE cicloBloque . RBRACE

    RBRACE          shift and go to state 59


state 47

    (27) asignacion -> ID . auxAsignacion1 EQUALA exp SEMICOLON
    (82) llamada -> ID . LPAREN auxLlamada RPAREN SEMICOLON
    (28) auxAsignacion1 -> . LBRACKET exp RBRACKET
    (29) auxAsignacion1 -> .

    LPAREN          shift and go to state 62
    LBRACKET        shift and go to state 60
    EQUALA          reduce using rule 29 (auxAsignacion1 -> .)

    auxAsignacion1                 shift and go to state 61

state 48

    (21) estatuto -> asignacion .

    ID              reduce using rule 21 (estatuto -> asignacion .)
    IF              reduce using rule 21 (estatuto -> asignacion .)
    PRINT           reduce using rule 21 (estatuto -> asignacion .)
    READ            reduce using rule 21 (estatuto -> asignacion .)
    WHILE           reduce using rule 21 (estatuto -> asignacion .)
    RBRACE          reduce using rule 21 (estatuto -> asignacion .)


state 49

    (23) estatuto -> escritura .

    ID              reduce using rule 23 (estatuto -> escritura .)
    IF              reduce using rule 23 (estatuto -> escritura .)
    PRINT           reduce using rule 23 (estatuto -> escritura .)
    READ            reduce using rule 23 (estatuto -> escritura .)
    WHILE           reduce using rule 23 (estatuto -> escritura .)
    RBRACE          reduce using rule 23 (estatuto -> escritura .)


state 50

    (5) auxVar1 -> idVars COLON tipo SEMICOLON . auxVar1
    (5) auxVar1 -> . idVars COLON tipo SEMICOLON auxVar1
    (6) auxVar1 -> .
    (7) idVars -> . ID ambIdVars

    VAR             reduce using rule 6 (auxVar1 -> .)
    FUNCTION        reduce using rule 6 (auxVar1 -> .)
    MAIN            reduce using rule 6 (auxVar1 -> .)
    ID              shift and go to state 14

    idVars                         shift and go to state 12
    auxVar1                        shift and go to state 63

state 51

    (12) auxTipo1 -> auxTipo2 LBRACKET . CTEINT RBRACKET

    CTEINT          shift and go to state 64


state 52

    (78) auxParametros -> tipo ID . ambAuxParametros
    (79) ambAuxParametros -> . COMMA auxParametros
    (80) ambAuxParametros -> .

    COMMA           shift and go to state 66
    RPAREN          reduce using rule 80 (ambAuxParametros -> .)

    ambAuxParametros               shift and go to state 65

state 53

    (74) funcion -> FUNCTION ID LPAREN auxFunction RPAREN . bloque
    (18) bloque -> . LBRACE cicloBloque RBRACE

    LBRACE          shift and go to state 22

    bloque                         shift and go to state 67

state 54

    (90) lectura -> READ LPAREN . ID RPAREN SEMICOLON

    ID              shift and go to state 68


state 55

    (81) ciclo -> WHILE LPAREN . expresion RPAREN bloque
    (36) expresion -> . exp auxExpresion exp
    (37) expresion -> .
    (47) exp -> . cicloExp
    (48) cicloExp -> . termino ambExp
    (53) termino -> . cicloTermino
    (54) cicloTermino -> . factor ambCicloTermino
    (59) factor -> . LPAREN exp RPAREN
    (60) factor -> . auxFactor varcte
    (61) auxFactor -> . auxExp
    (62) auxFactor -> .
    (51) auxExp -> . PLUS
    (52) auxExp -> . MINUS

    RPAREN          reduce using rule 37 (expresion -> .)
    LPAREN          shift and go to state 70
    ID              reduce using rule 62 (auxFactor -> .)
    CTEINT          reduce using rule 62 (auxFactor -> .)
    CTEFLOAT        reduce using rule 62 (auxFactor -> .)
    CTECHAR         reduce using rule 62 (auxFactor -> .)
    CTEBOOL         reduce using rule 62 (auxFactor -> .)
    CTESTRING       reduce using rule 62 (auxFactor -> .)
    PLUS            shift and go to state 73
    MINUS           shift and go to state 77

    expresion                      shift and go to state 69
    auxExp                         shift and go to state 71
    auxFactor                      shift and go to state 72
    termino                        shift and go to state 74
    exp                            shift and go to state 75
    factor                         shift and go to state 76
    cicloExp                       shift and go to state 78
    cicloTermino                   shift and go to state 79

state 56

    (30) escritura -> PRINT LPAREN . auxEscritura1 RPAREN SEMICOLON
    (31) auxEscritura1 -> . auxEscritura2 ambAuxEscritura1
    (34) auxEscritura2 -> . exp
    (35) auxEscritura2 -> . CTESTRING
    (47) exp -> . cicloExp
    (48) cicloExp -> . termino ambExp
    (53) termino -> . cicloTermino
    (54) cicloTermino -> . factor ambCicloTermino
    (59) factor -> . LPAREN exp RPAREN
    (60) factor -> . auxFactor varcte
    (61) auxFactor -> . auxExp
    (62) auxFactor -> .
    (51) auxExp -> . PLUS
    (52) auxExp -> . MINUS

  ! shift/reduce conflict for CTESTRING resolved as shift
    CTESTRING       shift and go to state 83
    LPAREN          shift and go to state 70
    ID              reduce using rule 62 (auxFactor -> .)
    CTEINT          reduce using rule 62 (auxFactor -> .)
    CTEFLOAT        reduce using rule 62 (auxFactor -> .)
    CTECHAR         reduce using rule 62 (auxFactor -> .)
    CTEBOOL         reduce using rule 62 (auxFactor -> .)
    PLUS            shift and go to state 73
    MINUS           shift and go to state 77

  ! CTESTRING       [ reduce using rule 62 (auxFactor -> .) ]

    auxEscritura1                  shift and go to state 81
    auxEscritura2                  shift and go to state 82
    auxExp                         shift and go to state 71
    termino                        shift and go to state 74
    exp                            shift and go to state 80
    factor                         shift and go to state 76
    auxFactor                      shift and go to state 72
    cicloExp                       shift and go to state 78
    cicloTermino                   shift and go to state 79

state 57

    (19) cicloBloque -> estatuto cicloBloque .

    RBRACE          reduce using rule 19 (cicloBloque -> estatuto cicloBloque .)


state 58

    (44) condicion -> IF LPAREN . expresion RPAREN bloque auxCondicion
    (36) expresion -> . exp auxExpresion exp
    (37) expresion -> .
    (47) exp -> . cicloExp
    (48) cicloExp -> . termino ambExp
    (53) termino -> . cicloTermino
    (54) cicloTermino -> . factor ambCicloTermino
    (59) factor -> . LPAREN exp RPAREN
    (60) factor -> . auxFactor varcte
    (61) auxFactor -> . auxExp
    (62) auxFactor -> .
    (51) auxExp -> . PLUS
    (52) auxExp -> . MINUS

    RPAREN          reduce using rule 37 (expresion -> .)
    LPAREN          shift and go to state 70
    ID              reduce using rule 62 (auxFactor -> .)
    CTEINT          reduce using rule 62 (auxFactor -> .)
    CTEFLOAT        reduce using rule 62 (auxFactor -> .)
    CTECHAR         reduce using rule 62 (auxFactor -> .)
    CTEBOOL         reduce using rule 62 (auxFactor -> .)
    CTESTRING       reduce using rule 62 (auxFactor -> .)
    PLUS            shift and go to state 73
    MINUS           shift and go to state 77
